--- a/index.html
+++ b/index.html
@@ -2,66 +2,62 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Jack Craven — EPK</title>
-<link rel="stylesheet" href="style.css">
+<title>Jack Craven - Official Site</title>
+<style>
+body { font-family: Arial, sans-serif; background:#111; color:#eee; margin:0; padding:0; }
+header { text-align:center; padding:40px 20px; font-size:48px; font-weight:bold; color:#e53935; }
+section { padding:20px 40px; max-width:900px; margin:auto; }
+img { width:100%; border-radius:10px; margin:20px 0; }
+.contact-box { background:#222; padding:20px; border-radius:10px; }
+label { display:block; margin-top:10px; }
+input, textarea { width:100%; padding:10px; border-radius:5px; border:none; margin-top:5px; }
+button { margin-top:15px; padding:12px 20px; border:none; background:#e53935; color:white; border-radius:5px; cursor:pointer; }
+footer { text-align:center; padding:20px; opacity:0.7; }
+</style>
 </head>
 <body>
 
-<header>
-  <h1>Jack Craven</h1>
-  <h2>Authentic • Dynamic • Original</h2>
-</header>
-
-<section class="bio">
-Authenticity and passion are the trademarks for Jack Craven’s artistic identity. Known for his complex flows, Craven, born in Toronto CA, started writing music at a young age. He spent his early adolescence honing the lyrical, nostalgic style of rap that gained him respect amongst peers & surrounding artists in Southern Ontario.<br><br>
-Blending traditional hip-hop with R&B, dark melodies & hard-hitting trap, Craven has established himself at the forefront of Canada’s hip-hop scene. Jack Craven is also a member of the London-based music collective 'Fresh Religion', a group of artists who produce music, social media content & host live events. This artist is no stranger to the limelight & will continue to be a rising star within the music industry.
-</section>
+<header>JACK CRAVEN</header>
 
 <section>
-  <h3 class="section-title">Music</h3>
-  <div class="spotify-player">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7q65AtrPvffwqNKWDI66ki" width="100%" height="352" allow="autoplay; clipboard-write; encrypted-media;"></iframe>
-  </div>
-</section>
+<h2>One Sheet</h2>
+<img src="images/one_sheet.jpg">
 
-<section>
-  <h3 class="section-title">Featured Video</h3>
-  <div class="video-embed">
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/QlB3c7_ViWg" allowfullscreen></iframe>
-  </div>
-</section>
+<h2>Sirius XM Promo</h2>
+<img src="images/sirius_promo.png">
 
-<section>
-  <h3 class="section-title">Gallery</h3>
-  <div class="gallery">
-    <img src="images/IMG_1886.jpeg" onclick="openLightbox(this.src)">
-    <img src="images/IMG_2031.jpeg" onclick="openLightbox(this.src)">
-    <img src="images/931B9001-E775-4064-B698-659F718688CA.jpeg" onclick="openLightbox(this.src)">
-    <img src="images/AE8A9210-4003-4973-88F3-C614D33A984B.jpeg" onclick="openLightbox(this.src)">
-    <img src="images/B8421E07-7D1D-4A3D-9EB5-FC7DC3C82F6F.jpeg" onclick="openLightbox(this.src)">
+<h2>Music</h2>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/4zCswyxB6PhtcE88Rwl5vF?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" loading="lazy"></iframe>
 
-  </div>
-</section>
+<h2>Social Links</h2>
+<p>
+Instagram: <a href="https://instagram.com/itsjackcraven" style="color:#e53935">@itsjackcraven</a><br>
+TikTok: <a href="https://tiktok.com/@itsjackcraven" style="color:#e53935">@itsjackcraven</a>
+</p>
 
-<div id="lightbox" onclick="closeLightbox()">
-  <img id="lightbox-img">
+<h2>Contact</h2>
+<div class="contact-box">
+<p>Email: jackcravenmgmt@gmail.com</p>
+<p>Text: 1 (416) 839 7200</p>
+<p>Social: @itsjackcraven</p>
+
+<form>
+<label>Name</label>
+<input type="text">
+
+<label>Email</label>
+<input type="email">
+
+<label>Message</label>
+<textarea rows="6"></textarea>
+
+<button type="submit">Send</button>
+</form>
 </div>
 
-<section>
-  <h3 class="section-title">Booking</h3>
-  <p class="contact-email">jackcravenmgmt@gmail.com</p>
 </section>
 
-<footer>
-  <div class="socials">
-    <a href="https://open.spotify.com/artist/7q65AtrPvffwqNKWDI66ki" target="_blank">Spotify</a>
-    <a href="https://instagram.com/itsjackcraven" target="_blank">Instagram</a>
-    <a href="https://www.tiktok.com/@itsjackcraven" target="_blank">TikTok</a>
-  </div>
-  <p>© 2025 Jack Craven — Electronic Press Kit</p>
-</footer>
-
-<script src="script.js"></script>
+<footer>© 2025 Jack Craven</footer>
 
 </body>
 </html>
