--- a/index.html
+++ b/index.html
@@ -1,77 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Jack Craven EPK</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PHOENIX ECHO - Official Electronic Press Kit (EPK)</title>
+    <!-- Link to the custom styling file -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Load Font Awesome for social media icons (External Library) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Favicon placeholder (Replace 'favicon.ico' with your actual file) -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<header>
-  <h1>JACK CRAVEN</h1>
-  <h2>Hip-Hop / R&B Artist · Toronto / London, ON</h2>
-</header>
 
-<section class="bio">
-  <p>Jack Craven is a Canadian Hip-Hop/R&B artist blending emotional storytelling, modern production, and immersive sonic textures. With a background in Music Industry Arts, Jack brings together his technical knowledge and artistic identity to create music that resonates deeply.</p>
-</section>
+    <!-- ARTIST HEADER AND INTRODUCTION SECTION -->
+    <header class="container header-section">
+        <h1>PHOENIX ECHO</h1>
+        <p class="bio">
+            <!-- *** CUSTOMIZE THIS SHORT 3-SENTENCE BIO *** -->
+            Phoenix Echo carves out a niche in the synth-wave revival, blending cinematic 80s soundscapes with modern, introspective lyricism, earning comparisons to The Weeknd and M83. The debut single "Neon City Lights" achieved viral success, hitting the top 10 on the Spotify Global Viral 50 and receiving critical acclaim from Indie Music Digest. Currently in the studio, the artist is preparing for a multi-city European tour and the release of the highly anticipated sophomore EP, "Digital Ghost."
+        </p>
+    </header>
 
-<section class="music">
-  <h3>Listen</h3>
+    <main class="container">
+        <!-- FEATURED MEDIA SECTION (Video and Spotify Player) -->
+        <section id="media" class="media-section">
+            <h2>Featured Music & Video</h2>
 
-  <div class="embeds">
+            <!-- Placeholder for EMBED VIDEO (YouTube/Vimeo) - PLEASE REPLACE ENTIRE IFRAME -->
+            <div class="video-embed">
+                <!-- IMPORTANT: Replace the 'src' attribute with your video's embed URL -->
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0" 
+                    title="Official Music Video Placeholder" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+            </div>
 
-    <!-- Spotify -->
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7q65AtrPvffwqNKWDI66ki" width="100%" height="152" frameborder="0" allowfullscreen></iframe>
+            <!-- Placeholder for SPOTIFY PLAYER - PLEASE REPLACE ENTIRE IFRAME -->
+            <div class="spotify-embed">
+                <!-- IMPORTANT: Replace the 'src' attribute with your Spotify Album/Track/Playlist embed URL -->
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1DFi871sQdE3Xy0MhE8m7n?utm_source=generator" 
+                    width="100%" height="352" frameborder="0" allowfullscreen="" 
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+        </section>
 
-    <!-- Apple Music -->
-    <iframe allow="autoplay *; encrypted-media *; fullscreen *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;border-radius:12px;" 
-    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" 
-    src="https://embed.music.apple.com/us/artist/jack-craven/1489262474"></iframe>
+        <!-- GALLERY SECTION -->
+        <section id="gallery" class="gallery-section">
+            <h2>Viewable Gallery</h2>
+            <div class="image-grid">
+                <!-- Ensure your image files are placed in the 'assets' folder -->
+                <img src="assets/gallery_1.jpg" alt="Phoenix Echo professional headshot" class="gallery-item">
+                <img src="assets/gallery_2.jpg" alt="Live performance shot at sold-out venue" class="gallery-item">
+                <img src="assets/gallery_3.jpg" alt="Behind-the-scenes studio session photo" class="gallery-item">
+            </div>
+        </section>
 
-    <!-- YouTube videos -->
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/QlB3c7_ViWg" frameborder="0" allowfullscreen></iframe>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/fd93WTqSt4M" frameborder="0" allowfullscreen></iframe>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/VG6dIQXwkeE" frameborder="0" allowfullscreen></iframe>
+        <!-- HIGHLIGHTS SECTION -->
+        <section id="highlights" class="highlights-section">
+            <h2>Highlights & Achievements</h2>
+            <ul>
+                <!-- *** CUSTOMIZE THESE HIGHLIGHTS *** -->
+                <li>**Featured Artist** on Spotify's "Fresh Finds: Synth Pop" editorial Playlist (Q2 2025)</li>
+                <li>Single "Neon City Lights" licensed for use in the hit Netflix series **'Future Ghosts'**</li>
+                <li>Press coverage and profile piece in **NME** magazine, calling the sound "irresistible and vital"</li>
+                <li>Successfully headlined the **Retrowave Festival** in Berlin, performing to over 10,000 fans</li>
+            </ul>
+        </section>
+    </main>
 
-  </div>
-</section>
+    <!-- CONTACT & FOOTER SECTION -->
+    <footer class="container footer-section">
+        <div class="contact-info">
+            <h2>Contact Information</h2>
+            <!-- *** CUSTOMIZE EMAIL AND CONTACT INFO *** -->
+            <p><strong>Management/Booking:</strong> <a href="mailto:booking@phoenixecho.com">booking@phoenixecho.com</a></p>
+            <p><strong>Press Contact:</strong> Sarah Davies (Agent) - <a href="tel:+15555551234">(555) 555-1234</a></p>
+        </div>
 
-<section class="downloads">
-  <a href="Jack_Craven_EPK.pdf" class="btn">Download PDF EPK</a>
-</section>
+        <!-- Social Media Icons (Font Awesome) -->
+        <div class="social-links">
+            <!-- *** REPLACE THE '#' WITH YOUR FULL SOCIAL MEDIA URLS *** -->
+            <a href="https://open.spotify.com/artist/YOUR_ID" target="_blank" aria-label="Listen on Spotify"><i class="fab fa-spotify"></i></a>
+            <a href="https://instagram.com/YOUR_HANDLE" target="_blank" aria-label="Follow on Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://youtube.com/YOUR_CHANNEL" target="_blank" aria-label="Subscribe on YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://x.com/YOUR_HANDLE" target="_blank" aria-label="Follow on X"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://soundcloud.com/YOUR_ID" target="_blank" aria-label="Listen on SoundCloud"><i class="fab fa-soundcloud"></i></a>
+        </div>
+        
+        <p class="copyright">© 2025 Phoenix Echo. All Rights Reserved.</p>
+    </footer>
 
-<section class="gallery">
-  <h3>Gallery</h3>
-  <p>Upload your images into the <strong>images/</strong> folder and they will appear here.</p>
-  <div class="grid"></div>
-</section>
-
-<section class="contact">
-  <h3>Contact / Booking</h3>
-  <p>Email: <a href="mailto:jackcravenbusiness@gmail.com">jackcravenbusiness@gmail.com</a></p>
-
-  <div class="social-icons">
-    <a href="https://open.spotify.com/artist/7q65AtrPvffwqNKWDI66ki" target="_blank">
-      <img src="icons/spotify.svg" alt="Spotify">
-    </a>
-    <a href="https://music.apple.com/us/artist/jack-craven/1489262474" target="_blank">
-      <img src="icons/apple.svg" alt="Apple Music">
-    </a>
-    <a href="https://www.youtube.com/@jackcraven" target="_blank">
-      <img src="icons/youtube.svg" alt="YouTube">
-    </a>
-    <a href="https://instagram.com/itsjackcraven" target="_blank">
-      <img src="icons/instagram.svg" alt="Instagram">
-    </a>
-  </div>
-</section>
-
-<div id="lightbox" onclick="closeLightbox()">
-  <img id="lightbox-img">
-</div>
-
-<script src="script.js"></script>
 </body>
 </html>
